Update Project 2 Digits.ipynb

--- a/Project 2 Digits.ipynb
+++ b/Project 2 Digits.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Project 2\n",
-    "## Philip Rundall and Sam Boghese\n",
+    "## Philip Rundall\n",
     "\n",
     "We built two final models. The first is a Feed Forward Neural Network (FFNN) and the second is a Convolutional Neural Network (CNN). After tuning the paramaters in both, the training and testing accuracy can be seen in the DataFrame Below. \n",
     "\n",
